# mentorship

./: 9_broblem  README.md  SETUP.md
src/: CMakeLists.txt  LICENSE  Makefile  README.md  SETUP.md  main.cpp
src/lessons/assignment-operators/: AssignmentOperators.cpp  converter
src/lessons/binary-operations/: README.md
src/problems/OOP/: CustomerInfo.cpp  Employee.cpp  Laptop.cpp  PhoneContact.cpp  UpdateLaptop.cpp  customer  mylaptop
src/problems/bitwise/: DecimalToBinaryNumber.cpp  MinimumNumbersBits.cpp  SwappingBitsOfBayt.cpp  converter
src/problems/leetcode/: MonotonicArray.cpp  PowerOfTwo.cpp  README.md  monotonic
src/problems/w3resource/: ConvertingCapitalLetter.cpp  Find the largest and smallest elements of an array.cpp  FindLargestAndSmallestArray.cpp  FindingLargeWord.cpp  FindingSum.cpp  Initialize and print all elements of a 2D array.cpp  Initialize to array.cpp  LongestWord.cpp  NextLetter.cpp  Palindrome.cpp  PerfectNumber.cpp  PrimeNumber.cpp  PrimeNumberWithinRange.cpp  ReverseOrder.cpp  ReverseOrderOfString.cpp  StoreElementInTwoDifferentArrays.cpp  SumOfNumbers.cpp  Take an array of 10 elements. Split it into middle and store the elements in two dfferent arrays.cpp  TypesOfNumber.cpp  Writing a program to find the sum and product of all elements of an array.cpp  capital  copying all the elements in another array and reverse order.cpp  copying array.cpp  largest and smallest array.cpp  letter1  mini calculator.cpp  reverse1  store the element in two different arrays.cpp
src/problems/w3resource/DynamicMemoryAllocation/: AllocatingArray.cpp  (+2 more)
(+47 files in other folders)
